--- a/partials/post.html
+++ b/partials/post.html
@@ -54,7 +54,7 @@
             </div>    
             <div class="input-field col s12 m3">
                 <i class="material-icons prefix">today</i>
-                <input type="date" class="datepicker" id="startDate" name="startDate" value="" required/> 
+                <input type="date" class="datepicker" ng-model="startDate" name="startDate"required/> 
                 <label class="active" for="startDate">Start</label>
             </div>
             <div class="input-field col s12 m3">
@@ -149,7 +149,7 @@
             </div>
           </div>
           <div id="us"></div>
-          <button ng-hide="postForm.title.$error.required" ng-click="post()" class="waves-effect waves-green btn">Save</button>
+          <button ng-hide="postForm.title.$error.required || postForm.startDate.$error.required" ng-click="post()" class="waves-effect waves-green btn">Save</button>
         </form>
      </div>
   </div>
