--- a/partials/post.html
+++ b/partials/post.html
@@ -87,7 +87,7 @@
                 </select>
             </div>
             <div class="input-field col s12 m3">
-                <input type="date" class="datepicker" id="endDate" name="endDate" value="" required/> 
+                <input type="date" class="datepicker" ng-model="endDate" name="endDate" value="" required/> 
                 <label class="active" for="endDate">End</label>
             </div>
             <div class="input-field col s12 m3">
@@ -144,12 +144,12 @@
             </div>
             <div class="input-field col s12 m12">
               <i class="material-icons prefix">subject</i>
-              <textarea ng-model="description" name="description" class="materialize-textarea" length="200" required></textarea>
+              <textarea name="description" class="materialize-textarea" length="200" ></textarea>
               <label for="description">Description</label>
             </div>
           </div>
           <div id="us"></div>
-          <button ng-hide="postForm.title.$error.required || postForm.startDate.$error.required || postForm.location.$error.required || postForm.description.$error.required" ng-click="post()" class="waves-effect waves-green btn">Save</button>
+          <button ng-hide="postForm.title.$error.required || postForm.startDate.$error.required || postForm.endDate.$error.required || postForm.location.$error.required" ng-click="post()" class="waves-effect waves-green btn">Save</button>
         </form>
      </div>
   </div>
