--- a/partials/post.html
+++ b/partials/post.html
@@ -87,7 +87,7 @@
                 </select>
             </div>
             <div class="input-field col s12 m3">
-                <input type="date" class="datepicker" ng-model="endDate" name="endDate" value="" required/> 
+                <input type="date" class="datepicker" ng-model="endDate" name="endDate" required/> 
                 <label class="active" for="endDate">End</label>
             </div>
             <div class="input-field col s12 m3">
