--- a/partials/post.html
+++ b/partials/post.html
@@ -121,7 +121,7 @@
             </div>        
             <div class="input-field col s12 m6">
               <i class="material-icons prefix">location_on</i>
-              <input name="location" ng-model="location" type="text" class="validate" required>
+              <input name="location" type="text" class="validate" required>
               <label class="active" for="name">Location</label>
             </div>
             <div class="input-field col s12 m6">
@@ -149,7 +149,7 @@
             </div>
           </div>
           <div id="us"></div>
-          <button ng-hide="postForm.title.$error.required || postForm.startDate.$error.required || postForm.endDate.$error.required || postForm.location.$error.required" ng-click="post()" class="waves-effect waves-green btn">Save</button>
+          <button ng-hide="postForm.title.$error.required || postForm.startDate.$error.required || postForm.endDate.$error.required" ng-click="post()" class="waves-effect waves-green btn">Save</button>
         </form>
      </div>
   </div>
