--- a/partials/post.html
+++ b/partials/post.html
@@ -87,8 +87,8 @@
                 </select>
             </div>
             <div class="input-field col s12 m3">
-                <input type="date" class="datepicker" ng-model="endDate" name="endDate" required/> 
-                <label class="active" for="endDate">End</label>
+                <input type="date" class="datepicker" ng-model="endDate" name="endDate"required/>
+                <label class="active" for="endDate">Start</label>
             </div>
             <div class="input-field col s12 m3">
                 <select id="endTime" name="endTime" class="browser-default">
