--- a/partials/post.html
+++ b/partials/post.html
@@ -87,7 +87,7 @@
                 </select>
             </div>
             <div class="input-field col s12 m3">
-                <input type="date" class="datepicker" ng-model="endDate" name="endDate"required/>
+                <input type="date" class="datepicker" name="endDate" required/>
                 <label class="active" for="endDate">Start</label>
             </div>
             <div class="input-field col s12 m3">
@@ -149,7 +149,7 @@
             </div>
           </div>
           <div id="us"></div>
-          <button ng-hide="postForm.title.$error.required || postForm.startDate.$error.required || postForm.endDate.$error.required" ng-click="post()" class="waves-effect waves-green btn">Save</button>
+          <button ng-hide="postForm.title.$error.required || postForm.startDate.$error.required" ng-click="post()" class="waves-effect waves-green btn">Save</button>
         </form>
      </div>
   </div>
