--- a/partials/post.html
+++ b/partials/post.html
@@ -121,7 +121,7 @@
             </div>        
             <div class="input-field col s12 m6">
               <i class="material-icons prefix">location_on</i>
-              <input name="location" ng-model="location" type="text" class="validate" required>
+              <input id="location" name="location" ng-model="location" type="text" class="validate" required>
               <label class="active" for="name">Location</label>
             </div>
             <div class="input-field col s12 m6">
