--- a/partials/post.html
+++ b/partials/post.html
@@ -54,7 +54,7 @@
             </div>    
             <div class="input-field col s12 m3">
                 <i class="material-icons prefix">today</i>
-                <input type="date" class="datepicker" ng-model="startDate" name="startDate"required/> 
+                <input type="date" class="datepicker" id="startDate" ng-model="startDate" name="startDate"required/> 
                 <label class="active" for="startDate">Start</label>
             </div>
             <div class="input-field col s12 m3">
@@ -87,7 +87,7 @@
                 </select>
             </div>
             <div class="input-field col s12 m3">
-                <input type="date" class="datepicker" ng-model="endDate" name="endDate" value="" required/> 
+                <input type="date" class="datepicker" ng-model="endDate" name="endDate" id="endDate" required/> 
                 <label class="active" for="endDate">End</label>
             </div>
             <div class="input-field col s12 m3">
