--- a/partials/home.html
+++ b/partials/home.html
@@ -117,67 +117,22 @@
         </div>
     </div>
     <div class="row" id="feed">
-
         <div class="col s12 m6 offset-m3">
             <div ng-show="!filtered.length" class="card-panel">
               <span>No posts available.
               </span>
             </div>
-            <div class="card" ng-repeat="post in filtered = (posts | filter:query)">
-                <div class="card-image">
-                    <img src="{{ post.picture }}">
-                    <span class="card-title">{{ post.title }}</span>
-                </div>
-                <div class="card-content">
-                    <ul class="collection">
-                        <li class="collection-item">
-                            <div>
-                                By <b>{{ post.author }}</b>
-                                <span class="secondary-content">
-                                    <i class="material-icons">account_circle</i>
-                                </span>
-                            </div>
-                        </li>
-                        <li class="collection-item">
-                            <div>
-                                <i>{{ post.tags }}</i>
-                                <span class="secondary-content">
-                                    <i class="material-icons">label</i>
-                                </span>
-                            </div>
-                        </li>
-                        <li class="collection-item">
-                            <div>
-                                {{ post.date }}
-                                <span class="secondary-content">
-                                    <i class="material-icons">today</i>
-                                </span>
-                            </div>
-                        </li>
-                        <li class="collection-item">
-                            <div>
-                                <a target="_blank" href="https://www.google.com/maps/place/{{ post.location }}">
-                                    {{ post.location }}
-                                </a>
-                                <span class="secondary-content">
-                                    <i class="material-icons">location_on</i>
-                                </span>
-                            </div>
-                        </li>
-                        <li class="collection-item">
-                            <div>
-                                {{ post.description }} 
-                                <span class="secondary-content">
-                                    <i class="material-icons">subject</i>
-                                </span>
-                            </div>
-                        </li>
-                    </ul>
-                </div>
-                <div class="card-action">
-                    <a href="{{ post.link }}" target="_blank">Join <i class="material-icons">trending_flat</i></a>
-                </div>
-            </div>
+           <ul class="collection">
+              <li class="collection-item avatar">
+                <img src="{{ post.picture }}" alt="" class="circle">
+                <span class="title">{{ post.title }}</span>
+                <p>By {{ post.author }} <br>
+                   {{ post.location }}
+                </p>
+                <a href="#!" class="secondary-content"><i class="material-icons">grade</i></a>
+              </li>
+            </ul>
+
         </div>
     </div>
   </div>
