--- a/partials/home.html
+++ b/partials/home.html
@@ -128,7 +128,7 @@
                 <span class="title">{{ post.title }}</span>
                 <p>By {{ post.author }} <br>
                 </p>
-                <a href="{{ post.link }}" class="secondary-content"><i class="material-icons">trending_flat</i></a>
+                <a href="{{ post.link }}" class="secondary-content">Join</a>
               </li>
             </ul>
         </div>
