--- a/partials/home.html
+++ b/partials/home.html
@@ -125,7 +125,7 @@
            <ul class="collection">
               <li class="collection-item avatar" ng-repeat="post in filtered = (posts | filter:query)">
                 <img src="{{ post.picture }}" alt="" class="circle">
-                <a class="title" href="#/posts/:{{ post.$id }}">{{ post.title }}</span>
+                <a class="title" href="#/posts/:{{ post.$id }}">{{ post.title }}</a>
                 <p>By {{ post.author }} <br>
                 </p>
                 <a href="{{ post.link }}" target="_blank" class="secondary-content">Join</a>
