--- a/partials/home.html
+++ b/partials/home.html
@@ -128,7 +128,7 @@
                 <a class="title" href="#/posts/:{{ post.$id }}">{{ post.title }}</a>
                 <p>By {{ post.author }} <br>
                 </p>
-                <a href="{{ post.link }}" target="_blank" class="secondary-content">Join</a>
+                <span class="secondary-content">{{ post.tags }} </a>
               </li>
             </ul>
         </div>
