--- a/partials/detail.html
+++ b/partials/detail.html
@@ -31,7 +31,7 @@
   <div class="container">    
      <br/>
      <div class="row">
-         <div class="card col m6" >
+         <div ng-show="post" class="card col m6" >
                     <div class="card-image">
                         <img src="{{ post.picture }}">
                         <span class="card-title">{{ post.title }}</span>
