--- a/partials/detail.html
+++ b/partials/detail.html
@@ -31,9 +31,9 @@
   <div class="container">    
      <br/>
      <div class="row">
-         <div ng-show="post" class="card col m6" >
+         <div ng-show="show" class="card col m6" >
                     <div class="card-image">
-                        <img src="{{ post.picture }}">
+                        <img src="{{ post.picture }}"/>
                         <span class="card-title">{{ post.title }}</span>
                     </div>
                     <div class="card-content">
