--- a/partials/home.html
+++ b/partials/home.html
@@ -122,9 +122,18 @@
               <span>No posts available.
               </span>
             </div>
-            <div ng-show="loading" class="card-panel">
-              <span>Loading
-              </span>
+            <div ng-show="loading">
+              <div class="preloader-wrapper big active">
+                <div class="spinner-layer spinner-blue-only">
+                  <div class="circle-clipper left">
+                    <div class="circle"></div>
+                  </div><div class="gap-patch">
+                    <div class="circle"></div>
+                  </div><div class="circle-clipper right">
+                    <div class="circle"></div>
+                  </div>
+                </div>
+              </div>
             </div>
            <ul class="collection">
               <li class="collection-item avatar" ng-repeat="post in filtered = (posts | filter:query)">
