--- a/partials/home.html
+++ b/partials/home.html
@@ -125,11 +125,7 @@
             <div ng-show="loading">
               <div class="preloader-wrapper big active">
                 <div class="spinner-layer spinner-blue-only">
-                  <div class="circle-clipper left">
-                    <div class="circle"></div>
-                  </div><div class="gap-patch">
-                    <div class="circle"></div>
-                  </div><div class="circle-clipper right">
+                  <div class="gap-patch">
                     <div class="circle"></div>
                   </div>
                 </div>
