--- a/partials/home.html
+++ b/partials/home.html
@@ -123,12 +123,8 @@
               </span>
             </div>
             <div ng-show="loading">
-              <div class="preloader-wrapper big active">
-                <div class="spinner-layer spinner-blue-only">
-                  <div class="gap-patch">
-                    <div class="circle"></div>
-                  </div>
-                </div>
+              <div class="progress">
+                  <div class="indeterminate"></div>
               </div>
             </div>
            <ul class="collection">
