--- a/partials/home.html
+++ b/partials/home.html
@@ -131,8 +131,12 @@
               <li class="collection-item avatar" ng-repeat="post in filtered = (posts | filter:query)">
                 <img src="{{ post.picture }}" alt="" class="circle">
                 <a class="title" href="#/posts/{{ post.$id }}">{{ post.title }}</a>
-                <p>By {{ post.author }} <br>
+                <p>By <a href="#/organizations/{{ post.authorid }}">{{ post.author }}</a> <br>
+                <i>{{ post.date }}</i>>
                 </p>
+                <blockquote>
+                  {{ post.location }}
+                </blockquote>
                 <span class="secondary-content">{{ post.tags }} </a>
               </li>
             </ul>
