--- a/partials/home.html
+++ b/partials/home.html
@@ -131,15 +131,12 @@
               <li class="collection-item avatar" ng-repeat="post in filtered = (posts | filter:query)">
                 <img src="{{ post.picture }}" alt="" class="circle">
                 <a class="title" href="#/posts/{{ post.$id }}">{{ post.title }}</a>
-                <hr>
+                <p></p>
                 <p>By <a href="#/organizations/{{ post.authorid }}">{{ post.author }}</a> <br>
                 <i>{{ post.date }}</i>
-                
-                <b>
-                  {{ post.location }}
-                </b>
+
                 </p>
-                <span class="secondary-content">{{ post.tags }} </a>
+                <span class="secondary-content">{{ post.location }}</a>
               </li>
             </ul>
         </div>
