--- a/partials/home.html
+++ b/partials/home.html
@@ -134,9 +134,12 @@
                 <p></p>
                 <p>By <a href="#/organizations/{{ post.authorid }}">{{ post.author }}</a> <br>
                 <i>{{ post.date }}</i>
-
+                <br>
+                <b>
+                  {{ post.location }}
+                </b>
                 </p>
-                <span class="secondary-content">{{ post.location }}</a>
+                <span class="secondary-content">{{ post.tags }} </a>
               </li>
             </ul>
         </div>
