--- a/partials/home.html
+++ b/partials/home.html
@@ -132,12 +132,10 @@
                 <img src="{{ post.picture }}" alt="" class="circle">
                 <a class="title" href="#/posts/{{ post.$id }}">{{ post.title }}</a>
                 <p></p>
-                <p>By <a href="#/organizations/{{ post.authorid }}">{{ post.author }}</a> <br>
-                <i>{{ post.date }}</i>
+                <p class="flow-text">By <a href="#/organizations/{{ post.authorid }}">{{ post.author }}</a> <br>
+                {{ post.date }}
                 <br>
-                <b>
                   {{ post.location }}
-                </b>
                 </p>
                 <span class="secondary-content">{{ post.tags }} </a>
               </li>
