--- a/partials/home.html
+++ b/partials/home.html
@@ -132,7 +132,7 @@
                 <img src="{{ post.picture }}" alt="" class="circle">
                 <a class="title" href="#/posts/{{ post.$id }}">{{ post.title }}</a>
                 <p></p>
-                <p class="flow-text">By <a href="#/organizations/{{ post.authorid }}">{{ post.author }}</a> <br>
+                <p>By <a href="#/organizations/{{ post.authorid }}">{{ post.author }}</a> <br>
                 {{ post.date }}
                 <br>
                   {{ post.location }}
