--- a/partials/home.html
+++ b/partials/home.html
@@ -130,7 +130,7 @@
            <ul class="collection">
               <li class="collection-item avatar" ng-repeat="post in filtered = (posts | filter:query)">
                 <img src="{{ post.picture }}" alt="" class="circle">
-                <a class="title" href="#/posts/{{ post.$id }}">{{ post.title }}</a>
+                <a class="title" href="#/posts/{{ post.$id }}"><b>{{ post.title }}</b></a>
                 <p></p>
                 <p>By <a href="#/organizations/{{ post.authorid }}">{{ post.author }}</a> <br>
                 {{ post.date }}
