--- a/partials/user.html
+++ b/partials/user.html
@@ -37,9 +37,13 @@
                <ul class="collection">
                   <li class="collection-item avatar">
                     <img src="{{ user.image }}" alt="" class="circle">
-                    <span class="title">{{ user.name }}</span>
+                    
                      <table>
                         <tbody>
+                          <tr>
+                            <td><b>Name:</b></td>
+                            <td><span class="title">{{ user.name }}</span></td>
+                          </tr>
                           <tr>
                             <td><b>Email:</b></td>
                             <td>{{ user.email }}</td>
