--- a/partials/user.html
+++ b/partials/user.html
@@ -43,11 +43,11 @@
                      <table>
                         <tbody>
                           <tr>
-                            <td><b>Name:</b></td>
+                            <td><b>Name</b></td>
                             <td><span class="title">{{ user.name }}</span></td>
                           </tr>
                           <tr>
-                            <td><b>Email:</b></td>
+                            <td><b>Email</b></td>
                             <td>{{ user.email }}</td>
                           </tr>
                           <tr>
