--- a/partials/home.html
+++ b/partials/home.html
@@ -128,7 +128,7 @@
               </div>
             </div>
            <ul class="collection">
-              <li class="collection-item avatar" ng-repeat="post in filtered = (posts | filter:query)">
+              <li class="collection-item avatar" ng-repeat="post in filtered = (posts | filter:query) | reverse">
                 <img src="{{ post.picture }}" alt="" class="circle">
                 <a class="title" href="#/posts/{{ post.$id }}"><b>{{ post.title }}</b></a>
                 <p></p>
