--- a/partials/post.html
+++ b/partials/post.html
@@ -125,6 +125,11 @@
               <label class="active" for="name">Location</label>
             </div>
             <div class="input-field col s12 m6">
+              <i class="material-icons prefix">code</i>
+              <input name="link" ng-model="link" type="text" class="validate" required>
+              <label class="active" for="name">Registration Link</label>
+            </div>
+            <div class="input-field col s12">
               <select name="tags" ng-model="tags" class="browser-default">
                 <option selected="true" value="Animals">Animals</option>
                 <option value="Art/Culture">Art/Culture</option>
