--- a/partials/home.html
+++ b/partials/home.html
@@ -24,7 +24,7 @@
           <li><a href="#/about">About</a></li>
           <li><a href="#/contact">Contact</a></li>
         </ul>
-        <a data-activates="nav-mobile" class="button-collapse"><i class="material-icons">menu</i></a>
+        <button data-activates="nav-mobile" class="button-collapse"><i class="material-icons">menu</i></button>
       </div>
     </nav>
   </div>
