--- a/partials/contact.html
+++ b/partials/contact.html
@@ -24,7 +24,7 @@
           <li class="divider"></li>
           <li><a href="#/about">About</a></li>
         </ul>
-        <a href="#" data-activates="nav-mobile" class="button-collapse"><i class="material-icons">menu</i></a>
+        <a href="" data-activates="nav-mobile" class="button-collapse"><i class="material-icons">menu</i></a>
       </div>
     </nav>
   </div>
