--- a/partials/user.html
+++ b/partials/user.html
@@ -26,7 +26,7 @@
           <li><a href="#/about">About</a></li>
           <li><a href="#/contact">Contact</a></li>
         </ul>
-        <a href="#" data-activates="nav-mobile" class="button-collapse"><i class="material-icons">menu</i></a>
+        <a href="" data-activates="nav-mobile" class="button-collapse"><i class="material-icons">menu</i></a>
       </div>
     </nav>
   </div>
