--- a/partials/detail.html
+++ b/partials/detail.html
@@ -32,7 +32,15 @@
      <br/>
      <div class="row">
         <div class="col s12 m6 offset-m3">
-
+            <div ng-show="none" class="card-panel">
+              <span>This post doesn't exist.
+              </span>
+            </div>
+            <div ng-show="loading">
+              <div class="progress">
+                  <div class="indeterminate"></div>
+              </div>
+            </div>
              <div ng-show="show" class="card" >
                         <div class="card-image">
                             <img src="{{ post.picture }}"/>
