--- a/partials/user.html
+++ b/partials/user.html
@@ -34,7 +34,7 @@
      <br/>
      <div class="row">
         <div class="col s12 m6 offset-m3">
-            <div ng-show="error" class="card-panel">
+            <div ng-show="none" class="card-panel">
               <span>This post doesn't exist.
               </span>
             </div>
