--- a/partials/detail.html
+++ b/partials/detail.html
@@ -50,7 +50,7 @@
                             <ul class="collection">
                                 <li class="collection-item">
                                     <div>
-                                        By <b>{{ post.author }}</b>
+                                        By <a href="#/organizations/{{ post.authorid }}"><b>{{ post.author }}</b></a>
                                         <span class="secondary-content">
                                             <i class="material-icons">account_circle</i>
                                         </span>
