--- a/partials/detail.html
+++ b/partials/detail.html
@@ -33,7 +33,7 @@
      <div class="row">
         <div class="col s12 m6 offset-m3">
             <div ng-show="none" class="card-panel">
-              <span>This post doesn't exist.
+              <span class="center-align">This post doesn't exist.
               </span>
             </div>
             <div ng-show="loading">
