--- a/partials/user.html
+++ b/partials/user.html
@@ -35,7 +35,7 @@
      <div class="row">
         <div class="col s12 m6 offset-m3">
             <div ng-show="none" class="card-panel">
-              <span>This organization doesn't exist.
+              <span class="center-align">This organization doesn't exist.
               </span>
             </div>
             <div ng-show="loading">
