--- a/partials/detail.html
+++ b/partials/detail.html
@@ -33,8 +33,8 @@
      <div class="row">
         <div class="col s12 m6 offset-m3">
             <div ng-show="none" class="card-panel">
-              <span class="center-align">This post doesn't exist.
-              </span>
+              <h6 class="center-align">This post doesn't exist.
+              </h6>
             </div>
             <div ng-show="loading">
               <div class="progress">
