--- a/partials/user.html
+++ b/partials/user.html
@@ -35,8 +35,8 @@
      <div class="row">
         <div class="col s12 m6 offset-m3">
             <div ng-show="none" class="card-panel">
-              <span class="center-align">This organization doesn't exist.
-              </span>
+              <h6 class="center-align">This organization doesn't exist.
+              </h6>
             </div>
             <div ng-show="loading">
               <div class="progress">
