--- a/partials/home.html
+++ b/partials/home.html
@@ -133,7 +133,7 @@
                 <a class="title" href="#/posts/{{ post.$id }}"><b>{{ post.title }}</b></a>
                 <p></p>
                 <br>
-                <p>By <a href="#/organizations/{{ post.authorid }}">{{ post.author }}</a> <br>
+                <p>By <a href="#/organizations/{{ post.authorid }}">{{ post.author }}</a> <br><br/>
                 {{ post.date }}
                 <br><br/>
                 {{ post.location }}
