--- a/partials/home.html
+++ b/partials/home.html
@@ -138,7 +138,7 @@
                     <br>
                     <span class="grey-text">{{ post.date }}</span>
                     <br>
-                    <a class="secondary-content tooltipped" data-position="bottom" data-delay="50" data-tooltip="I am tooltip"><i class="material-icons">send</i></a>
+                    <a class="btn tooltipped" data-position="bottom" data-delay="50" data-tooltip="I am tooltip">Hover me!</a>
                     {{ post.location }}
                   </p>
                 </div>
