--- a/partials/home.html
+++ b/partials/home.html
@@ -137,8 +137,7 @@
                     By <a href="#/organizations/{{ post.authorid }}">{{ post.author }}</a>
                     <br>
                     <span class="grey-text">{{ post.date }}</span>
-                    <br>
-                    {{ post.location }}
+                    <a target="_blank" href="https://www.google.com/maps/place/{{ post.location }}" class="secondary-content"><i class="material-icons">location_on</i></a>
                   </p>
                 </div>
               </li>
