--- a/partials/home.html
+++ b/partials/home.html
@@ -136,7 +136,7 @@
                   <p>
                     By <a href="#/organizations/{{ post.authorid }}">{{ post.author }}</a>
                     <br>
-                    <span class="grey-text">{{ post.date }}</span>
+                    <span class="grey-text">{{ post.startDate }}</span>
                     <a target="_blank" href="https://www.google.com/maps/place/{{ post.location }}" class="secondary-content"><i class="material-icons">location_on</i></a>
                   </p>
                 </div>
