--- a/partials/home.html
+++ b/partials/home.html
@@ -93,7 +93,7 @@
             <div class="input-field">
               <i class="material-icons prefix">search</i>
               <input id="icon_prefix" ng-model="query.$" type="text" class="validate">
-              <label for="icon_prefix">Search Events (Name, Location, etc...)</label>
+              <label for="icon_prefix">Search (Event name, location, etc...)</label>
             </div>
         </div>
         <div class="col s12 m6 offset-m3">
