--- a/partials/detail.html
+++ b/partials/detail.html
@@ -69,7 +69,7 @@
                                 </li>
                                 <li class="collection-item">
                                     <div>
-                                        {{ post.date }}
+                                        {{ post.startTime }} on {{ post.startDate }} to {{ post.endTime }} on {{ post.endDate }}
                                         <span class="secondary-content">
                                             <i class="material-icons">today</i>
                                         </span>
