--- a/partials/detail.html
+++ b/partials/detail.html
@@ -61,7 +61,7 @@
                                 </li>
                                 <li class="collection-item">
                                     <div>
-                                        <i>{{ post.tags }}</i>
+                                        {{ post.type }} | <i>{{ post.tags }}</i>
                                         <span class="secondary-content">
                                             <i class="material-icons">label</i>
                                         </span>
