--- a/partials/home.html
+++ b/partials/home.html
@@ -96,7 +96,7 @@
               <label for="icon_prefix">Event name, location, etc...</label>
             </div>
         </div>
-        <div class="col s12 m6 offset-m3">
+        <div class="col s12 m4 offset-m2">
             <select ng-model="query.tags" class="browser-default">
               <option value="">All</option>
               <option value="Animals">Animals</option>
@@ -113,6 +113,13 @@
               <option value="Broadcasting">Broadcasting</option>
               <option value="Seniors">Seniors</option>
               <option value="Sports/Recreation">Sports</option>
+            </select> 
+        </div>
+        <div class="col s12 m4 offset-m2">
+            <select ng-model="query.type" class="browser-default">
+                <option selected="true" value="Volunteering">Volunteering</option>
+                <option value="Community Event">Community Event</option>
+                <option value="Open Positions">Open Positions</option>
             </select> 
         </div>
     </div>
