--- a/partials/home.html
+++ b/partials/home.html
@@ -117,7 +117,7 @@
         </div>
         <div class="col s12 m4 offset-m2">
             <select ng-model="query.type" class="browser-default">
-                <option selected="true" value="Volunteering">Volunteering</option>
+                <option value="Volunteering">Volunteering</option>
                 <option value="Community Event">Community Event</option>
                 <option value="Open Positions">Open Positions</option>
             </select> 
